packages/react-native/cpp/derec_ffi.h

/**
 * Opaque handle returned by [`derec_protocol_new`] and consumed by
 * every other entry point in this module. Holds the protocol instance + the
 * per-handle tokio runtime used to drive the async core synchronously.
 *
 * The `inner` protocol is wrapped in [`std::sync::Mutex`] so concurrent
 * FFI calls from different host threads (.NET worker pool, Node.js
 * worker_threads, etc.) are safe by construction. Each entry point
 * locks the mutex for the duration of its call, serializing access to
 * the protocol state — no `&mut DeRecProtocolHandle` is ever
 * materialized, so aliased `&mut` references (which would be immediate
 * undefined behavior) cannot arise even under contention. The tokio
 * `Runtime` itself is `Sync` and accepts `&self` `block_on`, but
 * holding the protocol lock across `block_on` also serializes runtime
 * invocations on the current-thread executor.
 */
typedef struct DeRecProtocolHandle DeRecProtocolHandle;
typedef struct DeRecError {
  int32_t category;
  int32_t code;
  /**
   * Owned C string. Null on success. Released by [`derec_free_error`].
   */
  char *message;
  /**
   * Valid when `code == DEREC_CODE_NON_OK_STATUS`.
   */
  int32_t peer_status;
  /**
   * Owned C string. Null when not applicable. Released by [`derec_free_error`].
   */
  char *peer_memo;
  /**
   * Valid when `code == DEREC_CODE_VERSION_MISMATCH`.
   */
  uint32_t expected;
  /**
   * Valid when `code == DEREC_CODE_VERSION_MISMATCH`.
   */
  uint32_t got;
} DeRecError;
typedef struct DeRecBuffer {
  uint8_t *ptr;
  size_t len;
} DeRecBuffer;
/**
 * Result type for entry points that return a `Vec<DeRecEvent>`.
 */
typedef struct DeRecProtocolEventsResult {
  struct DeRecError error;
  /**
   * UTF-8 JSON array of events. See [`crate::interop::ffi::protocol::events`]
   * for the per-variant shape. Caller releases via
   * [`crate::interop::ffi::derec_free_buffer`].
   */
  struct DeRecBuffer events_json;
} DeRecProtocolEventsResult;
/**
 * Replace this node's local `communication_info` map. Does not contact
 * peers — follow up with `start(FlowKind::UpdateChannelInfo)` to
 * propagate. The body is the same JSON wire shape used elsewhere on
 * the FFI: a UTF-8 JSON object with string keys + string values.
 *
 * # Safety
 *
 * `handle` must be a valid pointer returned by
 * [`super::derec_protocol_new`]. `info_json_ptr`/`info_json_len` must
 * describe a readable byte range. Concurrent calls on the same
 * handle from different threads are safe: the handle's internal
 * mutex serializes them.
 */
struct DeRecError derec_protocol_set_communication_info(struct DeRecProtocolHandle *handle,
                                                        const uint8_t *info_json_ptr,
                                                        size_t info_json_len);
/**
 * Replace this node's local transport endpoint. See
 * [`crate::protocol::DeRecProtocol::set_own_transport`] for the
 * changeover discipline (keep the old endpoint up during the
 * transition).
 *
 * # Safety
 *
 * `handle` must be a valid pointer returned by
 * [`super::derec_protocol_new`]. `uri_ptr`/`uri_len` must describe a
 * readable byte range. The `(uri, protocol)` pair is validated via
 * [`super::validate_transport`] before it is stored — see that
 * function's docs for the structural rules (length cap, scheme
 * match, enum discriminant). Concurrent calls on the same handle
 * from different threads are safe: the handle's internal mutex
 * serializes them.
 */
struct DeRecError derec_protocol_set_own_transport(struct DeRecProtocolHandle *handle,
                                                   const uint8_t *uri_ptr,
                                                   size_t uri_len,
                                                   int32_t protocol);
/**
 * Rebuild this protocol's `secret_id` namespace from a recovered
 * `Secret`. See [`crate::protocol::DeRecProtocol::restore`] for the
 * full contract and error semantics.
 *
 * `params_json_*` is a UTF-8 JSON blob of the shape:
 *
 * ```json
 * {
 *   "version": 7,
 *   "recovered_secret": {
 *     "helpers": [{ "channel_id": "11", "transport_uri": "...",
 *                   "shared_key": [..32 bytes..],
 *                   "communication_info": {} }],
 *     "secrets": [{ "id": [..], "name": "...", "data": [..] }],
 *     "replicas": {
 *       "channel_id": "21",
 *       "members": [{ "replica_id": "51966", "transport_uri": "...",
 *                     "role": "Source", "communication_info": {} }],
 *       "shared_key": [..32 bytes..]
 *     }
 *   }
 * }
 * ```
 *
 * Field names mirror `SecretWire` in `protocol/events/wire.rs` — the
 * same shape `SecretRecovered` carries. `channel_id` and `replica_id`
 * are decimal `u64` strings (empty / absent means zero).
 *
 * `replicas` is an **object**, not an array, and is omitted entirely when
 * the `secret_id` has no replica group. Every member of the group shares
 * the one `channel_id` and the one `shared_key` it carries, so neither is
 * repeated per member; a member is identified by `replica_id` alone, and
 * the group's source is the member whose `role` is `"Source"`.
 *
 * # Safety
 *
 * `handle` must be a valid pointer returned by
 * [`super::derec_protocol_new`]. `params_json_ptr`/`params_json_len`
 * must describe a readable byte range.
 */
struct DeRecProtocolEventsResult derec_protocol_restore(struct DeRecProtocolHandle *handle,
                                                        const uint8_t *params_json_ptr,
                                                        size_t params_json_len);