packages/dotnet/DeRec.Library/src/Native/Native.Protocol.cs


    [DllImport("derec_library", CallingConvention = CallingConvention.Cdecl)]
    internal static extern DeRecError derec_protocol_set_communication_info(
        IntPtr handle, byte[] infoJson, UIntPtr infoJsonLen);

    [DllImport("derec_library", CallingConvention = CallingConvention.Cdecl)]
    internal static extern DeRecError derec_protocol_set_own_transport(
        IntPtr handle, byte[] uri, UIntPtr uriLen, int protocol);

    [DllImport("derec_library", CallingConvention = CallingConvention.Cdecl)]
    internal static extern DeRecProtocolEventsResult derec_protocol_restore(
        IntPtr handle, byte[] paramsJson, UIntPtr paramsJsonLen);
}
